--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -21,6 +21,8 @@ add_library(magfie STATIC
     coil_tools.f90
     cerfon_freidberg_equilibrium.f90
     cerfon_freidberg_field.f90
+    analytical_gs_solver.f90
+    analytical_tokamak_field.f90
     ../fftw3.F90
 )
 target_link_libraries(magfie PRIVATE
