--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -177,6 +177,9 @@ add_test(
   COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/test_ascot5_compare.py
           --build-dir ${CMAKE_BINARY_DIR}
 )
+set_tests_properties(test_ascot5_compare PROPERTIES
+  ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/test/ascot5_compare/ascot5/build:$ENV{LD_LIBRARY_PATH}"
+)
 
 if(LIBNEO_TESTING_ENABLED)
   add_test(
