Remove ASCOT5 logo files from test artifacts
Delete logo.png and icon.png files from ASCOT5 before running
testboard. These are not test results and clutter the dashboard.

Testboard collects all PNG files from the artifacts, so we need
to clean up non-test images.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,12 @@ jobs:
           name: test-images
           path: image-artifacts
 
+      - name: Remove ASCOT5 logo files
+        run: |
+          set -euo pipefail
+          find image-artifacts -type f \( -name "logo.png" -o -name "icon.png" \) -delete
+          echo "Removed ASCOT5 logo and icon files from artifacts"
+
       - name: Restore previously published site
         run: |
           set -euo pipefail
