Link magfie against LAPACK

--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -28,6 +28,8 @@ target_link_libraries(magfie PRIVATE
     netcdf
     netcdff
     hdf5_tools
+    BLAS::BLAS
+    LAPACK::LAPACK
     FFTW::DoubleThreads
     FFTW::Double
 )
