--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,23 +17,15 @@ concurrency:
 
 jobs:
   GNU:
-    runs-on: ubuntu-22.04
-    container:
-      image: ghcr.io/itpplasma/devel:latest
-      options: --user root
+    runs-on: self-hosted
+    env:
+      LIBNEO_TESTING: "1"
 
     name: Build and test
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Fix permissions
-        run: |
-          git config --global --add safe.directory `pwd`
-
-      - name: Install Python dependencies
-        run: |
-          python3 -m pip install --break-system-packages -r requirements.txt
       - name: Build
         run: |
           make
@@ -42,14 +34,24 @@ jobs:
         run: |
           cd build && ctest --output-on-failure
 
-      - name: Editable install of libneo (system-wide)
+      - name: Upload GEQDSK plots
+        uses: actions/upload-artifact@v4
+        with:
+          name: geqdsk-plots
+          path: build/test_artifacts/*.png
+          if-no-files-found: ignore
+
+      - name: Editable install of libneo
         run: |
-          python3 -m pip install --break-system-packages -r requirements.txt
-          python3 -m pip install --break-system-packages -e .
+          pip install --break-system-packages -e .
 
       - name: Run Python tests (pytest)
         run: |
           pytest -q
+
+      - name: Compare with ASCOT5 reference
+        run: |
+          python test/scripts/test_ascot5_compare.py --build-dir build --output-dir build/test/ascot5_compare
 
       - name: Upload test image artifacts
         if: always()
@@ -60,13 +62,16 @@ jobs:
             build/test/**/*.png
             build/test/**/*.jpg
             build/test/**/*.jpeg
+            build/test_artifacts/**/*.png
+            build/test_artifacts/**/*.jpg
+            build/test_artifacts/**/*.jpeg
           if-no-files-found: warn
 
   dashboard:
     name: Build test dashboard
     needs: GNU
     if: ${{ needs.GNU.result == 'success' }}
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     permissions:
       contents: read
       pages: write
@@ -76,49 +81,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Checkout testboard
-        uses: actions/checkout@v4
-        with:
-          repository: lazy-fortran/testboard
-          path: testboard
-
-      - name: Install fpm
+      - name: Download testboard ARM64 binary
         run: |
           set -euo pipefail
-          wget -q https://github.com/fortran-lang/fpm/releases/download/v0.12.0/fpm-0.12.0-linux-x86_64-gcc-12
-          chmod +x fpm-0.12.0-linux-x86_64-gcc-12
-          sudo mv fpm-0.12.0-linux-x86_64-gcc-12 /usr/local/bin/fpm
-
-      - name: Ensure gfortran is available
-        run: |
-          set -euo pipefail
-          sudo apt-get update
-          sudo apt-get install -y gfortran
-
-      - name: Install dashboard dependencies
-        run: |
-          set -euo pipefail
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends wget rsync curl jq ca-certificates gnupg
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | \
-            sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | \
-            sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends gh
-
-      - name: Build testboard
-        run: |
-          set -euo pipefail
-          cd testboard
-          fpm build
+          curl -LO https://github.com/lazy-fortran/testboard/releases/latest/download/testboard-aarch64
+          chmod +x testboard-aarch64
 
       - name: Download image artifacts
         uses: actions/download-artifact@v4
         with:
           name: test-images
           path: image-artifacts
+
+      - name: Remove ASCOT5 logo files
+        run: |
+          set -euo pipefail
+          find image-artifacts -type f \( -name "logo.png" -o -name "icon.png" \) -delete
+          echo "Removed ASCOT5 logo and icon files from artifacts"
 
       - name: Restore previously published site
         run: |
@@ -150,10 +129,9 @@ jobs:
           PAGES_BASE_URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
         run: |
           set -euo pipefail
-          cd testboard
-          fpm run testboard -- \
-            --image-root ../image-artifacts \
-            --output ../dashboard \
+          ./testboard-aarch64 \
+            --image-root image-artifacts \
+            --output dashboard \
             --branch "${GITHUB_REF_NAME}" \
             --commit "${GITHUB_SHA}" \
             --run-id "${GITHUB_RUN_ID}" \
@@ -215,7 +193,7 @@ jobs:
     name: Deploy to GitHub Pages
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     needs: dashboard
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     permissions:
       contents: read
       pages: write
