Unify test output directories to build/test with subdirectories
Replace separate test_data and test_artifacts directories with a unified
build/test directory structure organized by test type:
- build/test/source/    - for source tests
- build/test/scripts/   - for script test outputs (geqdsk, geoflux, ascot5)
- build/test/python/    - for Python test outputs and visual check PNGs
- build/test/poincare/  - for poincare test outputs

This simplifies test artifact management and makes it easier to find
test outputs, as they are now organized by their test subdirectory
in the test/ tree, matching the source structure.

## Changes to CMakeLists.txt
- Create build/test subdirectories instead of test_data and test_artifacts
- Update all test commands to use the new TEST_OUTPUT_DIR structure
- Update test_ascot5_compare to use build/test/scripts

## Changes to Python tests
- test_vmec_coords.py: Output PNG directly to build/test/python
- test_coordinate_converter.py: Add PNG saving to 2 visual check functions
- test_fourier_utils.py: Add PNG saving to 6 visual check functions
- test_semi_periodic_fourier_spline.py: Add PNG saving to 3 visual check functions

All visual check tests now save PNGs to build/test/python/ with descriptive
names before displaying with plt.show(), ensuring all test artifacts are
preserved and organized.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -83,10 +83,13 @@ target_link_libraries(test_geqdsk_tools.x
 )
 
 if(LIBNEO_TESTING_ENABLED)
-  set(TEST_DATA_DIR ${CMAKE_BINARY_DIR}/test_data)
-  file(MAKE_DIRECTORY ${TEST_DATA_DIR})
-  set(TEST_ARTIFACT_DIR ${CMAKE_BINARY_DIR}/test_artifacts)
-  file(MAKE_DIRECTORY ${TEST_ARTIFACT_DIR})
+  set(TEST_OUTPUT_DIR ${CMAKE_BINARY_DIR}/test)
+  file(MAKE_DIRECTORY ${TEST_OUTPUT_DIR})
+  # Create subdirectories for different test types
+  file(MAKE_DIRECTORY ${TEST_OUTPUT_DIR}/source)
+  file(MAKE_DIRECTORY ${TEST_OUTPUT_DIR}/scripts)
+  file(MAKE_DIRECTORY ${TEST_OUTPUT_DIR}/python)
+  file(MAKE_DIRECTORY ${TEST_OUTPUT_DIR}/poincare)
 
   add_executable(test_geoflux.x source/test_geoflux.f90)
   target_link_libraries(test_geoflux.x
@@ -176,9 +179,10 @@ add_test(
   NAME test_ascot5_compare
   COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/test_ascot5_compare.py
           --build-dir ${CMAKE_BINARY_DIR}
+          --output-dir ${CMAKE_BINARY_DIR}/test/scripts
 )
 set_tests_properties(test_ascot5_compare PROPERTIES
-  ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/test/ascot5_compare/ascot5/build:$ENV{LD_LIBRARY_PATH}"
+  ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/test/scripts/ascot5/build:$ENV{LD_LIBRARY_PATH}"
 )
 
 if(LIBNEO_TESTING_ENABLED)
@@ -186,14 +190,14 @@ if(LIBNEO_TESTING_ENABLED)
     NAME test_geoflux
     COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/run_geoflux_test.py
             --exe $<TARGET_FILE:test_geoflux.x>
-            --data-dir ${TEST_DATA_DIR}
+            --data-dir ${TEST_OUTPUT_DIR}/scripts
   )
 
   add_test(
     NAME test_geqdsk_plot
     COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geqdsk_plot.py
-            --data-dir ${TEST_DATA_DIR}
-            --output-dir ${TEST_ARTIFACT_DIR}
+            --data-dir ${TEST_OUTPUT_DIR}/scripts
+            --output-dir ${TEST_OUTPUT_DIR}/scripts
             --basename geqdsk
   )
   set_tests_properties(test_geqdsk_plot PROPERTIES DEPENDS test_geoflux)
@@ -202,8 +206,8 @@ if(LIBNEO_TESTING_ENABLED)
     NAME test_geoflux_plot
     COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/geoflux_plot.py
             --exe $<TARGET_FILE:geoflux_coord_dump.x>
-            --data-dir ${TEST_DATA_DIR}
-            --output-dir ${TEST_ARTIFACT_DIR}
+            --data-dir ${TEST_OUTPUT_DIR}/scripts
+            --output-dir ${TEST_OUTPUT_DIR}/scripts
             --basename geoflux
   )
   set_tests_properties(test_geoflux_plot PROPERTIES DEPENDS test_geoflux)
