Fix f2py build: use proper CMake paths for interface generation
The efit_to_boozer f2py wrapper had broken relative paths like
../../libneo/magfie/field_divB0.f90 which don't exist in the build tree.
This caused f2py to skip files during wrapper generation.

This PR adds reset_field_eq_state() which is defined in field_eq_mod.f90.
F2py needs to see this module to generate proper interfaces, so it must
be included in the f2py command (but NOT recompiled - it comes from the
linked magfie library).

Changes:
- Replace all broken ../../libneo/* paths with ${CMAKE_SOURCE_DIR}/src/*
- Add field_eq_mod.f90 to f2py command for interface generation
- Field code comes from linked efit_to_boozer library (which links to magfie)
- Align with main CMakeLists.txt style using proper CMake variables

F2py uses the source files to generate Python interfaces, then the actual
implementation comes from the linked static libraries.

--- a/src/efit_to_boozer/CMakeLists.txt
+++ b/src/efit_to_boozer/CMakeLists.txt
@@ -132,12 +132,13 @@ add_custom_command(
   VERBATIM
   COMMAND "${Python_EXECUTABLE}" -m numpy.f2py
   "${CMAKE_CURRENT_SOURCE_DIR}/f2py_interfaces/f2py_efit_to_boozer.f90"
-  ../../libneo/magfie/field_divB0.f90
+  "${CMAKE_SOURCE_DIR}/src/magfie/field_divB0.f90"
+  "${CMAKE_SOURCE_DIR}/src/magfie/field_eq_mod.f90"
   "${CMAKE_CURRENT_SOURCE_DIR}/efit_to_boozer_mod.f90"
-  ../../libneo/spl_three_to_five.f90
+  "${CMAKE_SOURCE_DIR}/src/spl_three_to_five.f90"
   "${CMAKE_CURRENT_SOURCE_DIR}/field_line_integration_for_Boozer.f90"
-  ../../libneo/plag_coeff.f90
-  ../../libneo/binsrc.f90
+  "${CMAKE_SOURCE_DIR}/src/plag_coeff.f90"
+  "${CMAKE_SOURCE_DIR}/src/binsrc.f90"
   "${CMAKE_CURRENT_SOURCE_DIR}/rhs.f90"
   "${CMAKE_CURRENT_SOURCE_DIR}/spline_and_interpolate_magdata.f90"
   -m _efit_to_boozer --lower skip: oddorderspline polleg binomial odeint_allroutines', alloc_odeint odeint rkck rkqs :
