--- a/test/magfie/CMakeLists.txt
+++ b/test/magfie/CMakeLists.txt
@@ -1,24 +1,6 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/magfie)
 
-include(FetchContent)
-
-set(FORTPLOT_OVERRIDE_REPO $ENV{FORTPLOT_OVERRIDE_REPO})
-if (FORTPLOT_OVERRIDE_REPO)
-    message(STATUS "Using overridden fortplot repository: ${FORTPLOT_OVERRIDE_REPO}")
-    set(_fortplot_repo ${FORTPLOT_OVERRIDE_REPO})
-    set(_fortplot_tag HEAD)
-else()
-    set(_fortplot_repo https://github.com/lazy-fortran/fortplot.git)
-    set(_fortplot_tag main)
-endif()
-
-FetchContent_Declare(fortplot
-    GIT_REPOSITORY ${_fortplot_repo}
-    GIT_TAG ${_fortplot_tag}
-    GIT_SHALLOW TRUE
-)
-
-FetchContent_MakeAvailable(fortplot)
+find_package(Python REQUIRED COMPONENTS Interpreter)
 
 # Test executable for Biot-Savart Fourier routines
 add_executable(test_coil_tools_biot_savart.x test_coil_tools_biot_savart.f90)
@@ -38,7 +20,6 @@ target_link_libraries(test_coil_tools_vector_potential_derivs.x PRIVATE
     neo
     magfie
     util_for_test
-    fortplot::fortplot
     ${FFTW3_LIBRARIES}
     ${HDF5_LIBRARIES}
     ${NETCDF_LIBRARIES}
@@ -54,6 +35,22 @@ set_tests_properties(test_coil_tools_vector_potential_derivs PROPERTIES
     TIMEOUT 300
 )
 
+add_test(NAME plot_vector_potential_deriv_errors
+    COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/python/scripts/plot_derivative_error.py
+        --r-input ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dR_error.dat
+        --r-output ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dR_error.png
+        --z-input ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dZ_error.dat
+        --z-output ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dZ_error.png
+        --x-input ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dx_error.dat
+        --x-output ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dx_error.png
+        --y-input ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dy_error.dat
+        --y-output ${CMAKE_BINARY_DIR}/test/magfie/coil_tools_dAphi_dy_error.png
+        --dpi 150)
+set_tests_properties(plot_vector_potential_deriv_errors PROPERTIES
+    DEPENDS test_coil_tools_vector_potential_derivs
+    LABELS "magfie;coil_tools;python"
+    TIMEOUT 120)
+
 # Register the test
 add_test(NAME test_coil_tools_biot_savart COMMAND test_coil_tools_biot_savart.x)
 
@@ -68,5 +65,6 @@ set(PLOT_FOURIER_SCRIPT ${CMAKE_SOURCE_DIR}/test/magfie/scripts/run_plot_fourier
 add_test(NAME plot_fourier_aug
     COMMAND bash ${PLOT_FOURIER_SCRIPT} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} aug_lowres)
 set_tests_properties(plot_fourier_aug PROPERTIES
+    ENVIRONMENT "PYTHON_EXECUTABLE=${Python_EXECUTABLE}"
     LABELS "magfie;coil_tools;python"
     TIMEOUT 600)
