Rename tilted-coil validation scripts to neutral names

--- a/test/magfie/CMakeLists.txt
+++ b/test/magfie/CMakeLists.txt
@@ -63,9 +63,9 @@ set_tests_properties(test_coil_tools_biot_savart PROPERTIES
     TIMEOUT 300
 )
 
-# Test for ntor=0 field reconstruction with tilted coil
-add_executable(test_ntor0_tilted_coil.x test_ntor0_tilted_coil.f90)
-target_link_libraries(test_ntor0_tilted_coil.x PRIVATE
+# Test drivers for tilted-coil validation workflow
+add_executable(tilted_coil_fourier_modes.x tilted_coil_fourier_modes.f90)
+target_link_libraries(tilted_coil_fourier_modes.x PRIVATE
     neo
     magfie
     util_for_test
@@ -75,38 +75,41 @@ target_link_libraries(test_ntor0_tilted_coil.x PRIVATE
     ${MPI_Fortran_LIBRARIES}
 )
 
-add_executable(compute_axis_biot_savart.x compute_axis_biot_savart.f90)
-target_link_libraries(compute_axis_biot_savart.x PRIVATE
+add_executable(tilted_coil_axis_field.x tilted_coil_axis_field.f90)
+target_link_libraries(tilted_coil_axis_field.x PRIVATE
     neo
     magfie
 )
 
 add_test(
-    NAME generate_tilted_coil_geometry
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_tilted_coil.py
+    NAME tilted_coil_generate_geometry
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tilted_coil_geometry.py
             ${CMAKE_CURRENT_BINARY_DIR}/tilted_coil.dat
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
-
-add_test(
-    NAME compute_tilted_coil_fourier_modes
-    COMMAND test_ntor0_tilted_coil.x
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-)
-set_tests_properties(compute_tilted_coil_fourier_modes PROPERTIES
-    DEPENDS generate_tilted_coil_geometry
-    LABELS "magfie;ntor0"
+set_tests_properties(tilted_coil_generate_geometry PROPERTIES
+    LABELS "magfie;tilted_coil"
     TIMEOUT 300
 )
 
 add_test(
-    NAME validate_ntor0_field_reconstruction
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/validate_ntor0_fix.py
+    NAME tilted_coil_fourier_modes
+    COMMAND tilted_coil_fourier_modes.x
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
-set_tests_properties(validate_ntor0_field_reconstruction PROPERTIES
-    DEPENDS compute_tilted_coil_fourier_modes
-    LABELS "magfie;ntor0"
+set_tests_properties(tilted_coil_fourier_modes PROPERTIES
+    DEPENDS tilted_coil_generate_geometry
+    LABELS "magfie;tilted_coil"
     TIMEOUT 300
-    WILL_FAIL TRUE
+)
+
+add_test(
+    NAME tilted_coil_field_validation
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/validate_tilted_coil_fields.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+set_tests_properties(tilted_coil_field_validation PROPERTIES
+    DEPENDS tilted_coil_fourier_modes
+    LABELS "magfie;tilted_coil"
+    TIMEOUT 300
 )
