Add TF ripple perturbation support to analytical tokamak field
Implements toroidal field ripple following ASCOT5's B_GS model with
δ(r,θ,φ) = δ₀ (r/a₀)^α₀ exp(-θ²/2) cos(N_ripple φ)

Changes:
- Add ripple parameters to analytical_circular_eq_t type
  - Nripple: number of TF coils (0 = no ripple)
  - delta0: ripple amplitude
  - alpha0: radial dependency exponent
  - a0: minor radius reference
  - z0: midplane reference
- New eval_bfield_ripple method accepts toroidal angle phi
- Ripple modulates B_phi component while preserving poloidal field
- Full test suite with automatic plotting via CTest

Tests verify:
- 9-coil ripple with δ₀=0.10 produces ~12.65% peak-to-peak variation
- 40° periodicity (360°/9) visible in 2D (φ,Z) pcolormesh plots
- Axisymmetric field recovered when Nripple=0

Test files:
- test/source/test_ripple_field.f90: Fortran data generation
- test/scripts/plot_ripple_comparison.py: Python visualization
- Outputs: bphi_ripple_comparison.png showing unperturbed,
  perturbed, and difference fields

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -151,6 +151,9 @@ target_link_libraries(test_coordinate_systems.x neo ${MAGFIE_LIB})
 add_executable(test_analytical_circular.x source/test_analytical_circular.f90)
 target_link_libraries(test_analytical_circular.x ${MAGFIE_LIB} ${COMMON_LIBS})
 
+add_executable(test_ripple_field.x source/test_ripple_field.f90)
+target_link_libraries(test_ripple_field.x ${MAGFIE_LIB} ${COMMON_LIBS})
+
 
 ## Standard tests according to standard libneo Fortran test convention.
 
@@ -184,6 +187,20 @@ add_test(
 set_tests_properties(test_ascot5_compare PROPERTIES
   ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/test/scripts/ascot5/build:$ENV{LD_LIBRARY_PATH}"
 )
+
+add_test(
+  NAME test_ripple_field_data
+  COMMAND test_ripple_field.x
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/test
+)
+
+add_test(
+  NAME test_ripple_field_plot
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/plot_ripple_comparison.py
+          --data-dir ${CMAKE_BINARY_DIR}/test
+          --output-dir ${CMAKE_BINARY_DIR}/test
+)
+set_tests_properties(test_ripple_field_plot PROPERTIES DEPENDS test_ripple_field_data)
 
 if(LIBNEO_TESTING_ENABLED)
   add_test(
