Add analytical geoflux field module (WIP)
- Created analytical_geoflux_field module with init_analytical_geoflux
  and splint_analytical_geoflux_field subroutines
- Added initialize_analytical_geoflux to geoflux_coordinates module
- Added test_analytical_geoflux test (currently fails due to GEQDSK dependency)

Issue: Current implementation tries to reuse GEQDSK-based infrastructure
which requires grid data. Analytical GS evaluates on-the-fly without grids.

Next: Create simplified standalone implementation that doesn't depend on
GEQDSK infrastructure, suitable for SIMPLE integration.

--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(magfie STATIC
     polylag_3.f90
     magfie_cyl.f90
     geoflux_field.f90
+    analytical_geoflux_field.f90
     coil_tools.f90
     analytical_gs_solver.f90
     analytical_tokamak_field.f90
