--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -157,6 +157,9 @@ target_link_libraries(test_ripple_field.x ${MAGFIE_LIB} ${COMMON_LIBS})
 add_executable(test_analytical_geoflux.x source/test_analytical_geoflux.f90)
 target_link_libraries(test_analytical_geoflux.x ${MAGFIE_LIB} ${COMMON_LIBS})
 
+add_executable(test_analytical_geoflux_integration.x source/test_analytical_geoflux_integration.f90)
+target_link_libraries(test_analytical_geoflux_integration.x ${MAGFIE_LIB} ${COMMON_LIBS})
+
 
 ## Standard tests according to standard libneo Fortran test convention.
 
@@ -181,6 +184,7 @@ add_fortran_test(test_coordinate_systems)
 # add_fortran_test(test_analytical_gs_circular)  # TODO: update for new interface
 add_fortran_test(test_analytical_circular)
 add_fortran_test(test_analytical_geoflux)
+add_fortran_test(test_analytical_geoflux_integration)
 
 add_test(
   NAME test_ascot5_compare
