interpolate: add global-knot LSQ with CGLS and batch support

--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(interpolate STATIC
     batch_interpolate_2d.f90
     batch_interpolate_3d.f90
     batch_interpolate.f90
+    cgls_small.f90
+    cgls_dense.f90
     interpolate.f90)
 
 if(LIBNEO_BUILD_TESTING)
