--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -129,6 +129,15 @@ target_link_libraries(test_system_utility.x
 add_executable(test_util.x source/test_util.f90)
 target_link_libraries(test_util.x ${COMMON_LIBS})
 
+add_executable(test_cgls_dense.x source/test_cgls_dense.f90)
+target_link_libraries(test_cgls_dense.x ${COMMON_LIBS})
+
+add_executable(test_cgls_small.x source/test_cgls_small.f90)
+target_link_libraries(test_cgls_small.x ${COMMON_LIBS})
+
+add_executable(test_spline_cgls_global.x source/test_spline_cgls_global.f90)
+target_link_libraries(test_spline_cgls_global.x ${COMMON_LIBS})
+
 add_executable(test_plag_coeff.x source/test_plag_coeff.f90)
 target_link_libraries(test_plag_coeff.x ${COMMON_LIBS})
 
@@ -208,11 +217,14 @@ add_test(NAME test_geqdsk_tools COMMAND test_geqdsk_tools.x)
 add_test(NAME test_simpson COMMAND test_simpson.x)
 add_test(NAME test_hdf5_tools COMMAND test_hdf5_tools.x)
 add_test(NAME test_util COMMAND test_util.x)
+add_test(NAME test_cgls_dense COMMAND test_cgls_dense.x)
+add_test(NAME test_cgls_small COMMAND test_cgls_small.x)
 add_test(NAME test_plag_coeff COMMAND test_plag_coeff.x)
 add_test(NAME test_spl_three_to_five COMMAND test_spl_three_to_five.x)
 add_test(NAME test_species COMMAND test_species.x)
 add_test(NAME test_rng COMMAND test_rng.x)
 add_test(NAME test_polylag_3 COMMAND test_polylag_3.x)
+add_test(NAME test_spline_cgls_global COMMAND test_spline_cgls_global.x)
 add_test(NAME test_interpolate COMMAND test_interpolate.x)
 add_test(NAME test_batch_interpolate COMMAND test_batch_interpolate.x)
 add_test(NAME test_batch_interpolate_many COMMAND test_batch_interpolate_many.x)
