--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(interpolate STATIC
     ../spl_three_to_five.f90
     acc_spline_build_order5.f90
+    neo_bspline.f90
     batch_interpolate_types.f90
     batch_interpolate_1d.f90
     batch_interpolate_2d.f90
