Split neo_bspline into base/interp/lsq submodules and add direct interpolation
Reorganize the B-spline code into clean, single-responsibility modules:
- neo_bspline_base: core types, initialization, evaluation, basis functions
- neo_bspline_interp: direct interpolation via LAPACK collocation solve
- neo_bspline_lsq: least-squares fitting via matrix-free CGLS

The direct interpolation variant solves A*c = f where A_ij = B_j(x_i),
using separable tensor-product structure in 2D/3D to reduce dense solve
to dimension-by-dimension LU factorizations. OpenMP parallelizes the
back-substitution loops in 3D.

Benchmarks updated to compare all three methods: interpolate module,
neo_bspline LSQ, and neo_bspline direct. Large grid sizes skip direct
interpolation (O(n^3) scaling) to avoid timeouts.

--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_library(interpolate STATIC
     ../spl_three_to_five.f90
     acc_spline_build_order5.f90
+    neo_bspline_base.f90
+    neo_bspline_interp.f90
+    neo_bspline_lsq.f90
     neo_bspline.f90
     batch_interpolate_types.f90
     batch_interpolate_1d.f90
