--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -144,6 +144,9 @@ target_link_libraries(test_vmec_modules.x neo)
 add_executable(test_coordinate_systems.x source/test_coordinate_systems.f90)
 target_link_libraries(test_coordinate_systems.x neo ${MAGFIE_LIB})
 
+add_executable(test_gframe_coordinates.x source/test_gframe_coordinates.f90)
+target_link_libraries(test_gframe_coordinates.x neo ${MAGFIE_LIB})
+
 # TODO: Update test for new psi_1..psi_7 interface
 # add_executable(test_analytical_gs_circular.x source/test_analytical_gs_circular.f90)
 # target_link_libraries(test_analytical_gs_circular.x ${MAGFIE_LIB} ${COMMON_LIBS})
@@ -172,6 +175,7 @@ add_fortran_test(test_collision_freqs)
 add_fortran_test(test_transport)
 add_fortran_test(test_vmec_modules)
 add_fortran_test(test_coordinate_systems)
+add_fortran_test(test_gframe_coordinates)
 # add_fortran_test(test_analytical_gs_circular)  # TODO: update for new interface
 add_fortran_test(test_analytical_circular)
 
