Move dev dependencies to pyproject.toml optional [dev] group
- Add scipy, matplotlib, netCDF4, map2disc to [project.optional-dependencies.dev]
- Update CI to use pip install .[dev] instead of requirements.txt
- Remove redundant requirements.txt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install Python dependencies for tests
         run: |
-          pip install --break-system-packages -r requirements.txt
+          pip install --break-system-packages ".[dev]"
 
       - name: Test
         run: |
